csl_hw_setup/scripts/ad_hoc_network/example_files/sample_iptables_internet_prov_configuration
# Generated by iptables-save v1.4.21 on Wed Apr 19 14:34:40 2017
# File was saved using the iptables-save command. It is shown just as an
# example configuration for a successful internet setup in the ad-hoc

*filter
:INPUT ACCEPT [4139:968382]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3974:472231]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.100.0/24 -i wlan1 -o wlan0 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.8.0.0/24 -i wlan3 -o wlan0 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Wed Apr 19 14:34:40 2017
# Generated by iptables-save v1.4.21 on Wed Apr 19 14:34:40 2017
*mangle
:PREROUTING ACCEPT [120892:130143819]
:INPUT ACCEPT [112604:127738349]
:FORWARD ACCEPT [30:2585]
:OUTPUT ACCEPT [72030:6159800]
:POSTROUTING ACCEPT [72399:6296273]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Wed Apr 19 14:34:40 2017
# Generated by iptables-save v1.4.21 on Wed Apr 19 14:34:40 2017
*nat
:PREROUTING ACCEPT [1562:379603]
:INPUT ACCEPT [359:54455]
:OUTPUT ACCEPT [730:50109]
:POSTROUTING ACCEPT [368:25288]
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
# Completed on Wed Apr 19 14:34:40 2017
